# Opto-magnetic

./: .gitignore  CMakeLists.txt  README.md  log.txt  log_k5.txt  log_kk.txt  log_strategy.txt  mag_data.txt  mag_timestamp.txt  opt_data.txt  opt_timestamp.txt
169.254.0.22/: time.txt
169.254.0.33/: time.txt
169.254.0.55/: time.txt
include/: aurora.hpp  bmp.hpp  camera.hpp  optotrak.hpp  serial.hpp  sync.hpp  test.hpp
ndicapi/include/: ndicapiExport.h  ndicapi_math.h
ndicapi/lib32/: ndicapi.exp  ndicapi.lib
ndicapi/lib64/: ndicapi.lib
ndicapi/lib64/shared/: ndicapi.ilk  ndicapi.lib
ndlib/: CMakeLists.txt
ndlib/include/: certus_aux.h  datatypes.h  ndhost.h  ndopto.h  ndpack.h  ndtypes.h  ot_aux.h
ndlib/lib32/: certus_aux.lib  oapi.lib
ndlib/samples/: align.c  calibrig.c  certus_aux.h  certus_sample.c  certus_sample1.c  certus_sample11.c  certus_sample12.c  certus_sample13.c  certus_sample14.c  certus_sample15.c  certus_sample16.c  certus_sample17.c  certus_sample18.c  certus_sample19.c  certus_sample2.c  certus_sample20.c  certus_sample3.c  certus_sample4.c  datatypes.h  download.c  optsetup.c  ot_aux.c  readme.txt  register.c  sample1.c  sample10.c  sample11.c  sample12.c  sample13.c  sample14.c  sample15.c  sample16.c  sample17.c  sample18.c  sample19.c  sample2.c  sample20.c  sample21.c  sample22.c  sample3.c  (+7 more)
ndlib/samples/vc/: sample.c  sample.vcproj
src/: aurora.cpp  bmp.cpp  camera.cpp  main.cpp  optotrak.cpp  serial.cpp  test.cpp
test/: log_certus.txt  log_k10.txt  log_k20.txt  log_strategy.txt
test/camtime/10ms/lastonly/: 1.txt
test/camtime/10ms/lastonly/22/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/10ms/lastonly/33/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/10ms/lastonly/44/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/10ms/lastonly/55/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/10ms/onebyone/: 1.txt
test/camtime/10ms/onebyone/22/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/10ms/onebyone/33/: exend_time.txt  exstart_time.txt
test/camtime/10ms/onebyone/44/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/10ms/onebyone/55/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/10ms/upcoming/: 1.txt
test/camtime/10ms/upcoming/22/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/10ms/upcoming/33/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/10ms/upcoming/44/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/10ms/upcoming/55/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/5ms/lastonly/: 1.txt
test/camtime/5ms/lastonly/22/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/5ms/lastonly/33/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/5ms/lastonly/44/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/5ms/lastonly/55/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/5ms/onebyone/: 1.txt
test/camtime/5ms/onebyone/22/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/5ms/onebyone/33/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/5ms/onebyone/44/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/5ms/onebyone/55/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/5ms/upcoming/: 1.txt
test/camtime/5ms/upcoming/22/: exend_time.txt  exstart_time.txt  time.txt
test/camtime/5ms/upcoming/33/: exend_time.txt  exstart_time.txt
test/camtime/5ms/upcoming/44/: exend_time.txt  exstart_time.txt
test/camtime/5ms/upcoming/55/: exend_time.txt  exstart_time.txt
